# ADAS

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PHASE3_COMPLETION.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  REORGANIZATION_SUMMARY.md  TRANSFORMATION_SUMMARY.md  config.example.json  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
docs/: PROJECT_STRUCTURE.md  ROS2_INTEGRATION.md  TOOLS_GUIDE.md
src/adas/: __init__.py  cli.py  config.py  control.py  pipeline.py  planning.py  runtime.py  tracking.py
src/adas/control/: __init__.py  controller.py  safety.py
src/adas/core/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  models.py  validation.py
src/adas/perception/: __init__.py  detection.py  lane.py
src/adas/planning/: __init__.py  behavior_planner.py
src/adas/ros2/: __init__.py  bridge.py  converters.py  topics.py
src/adas/runtime/: __init__.py  pipeline.py  runner.py
src/adas/tools/: __init__.py  recorder.py  replayer.py
src/adas/tracking/: __init__.py  tracker.py
tests/: test.txt  test_control.py  test_pipeline.py  test_planning.py  test_safety.py  test_tracking.py  test_validation.py
